# universal-agent-template

./: .gitignore  .pre-commit-config.yaml  ARCHITECT_SUMMARY.md  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_MAP.md  DOCUMENT_PARSING_SUMMARY.md  GETTING_STARTED.md  GIT_PUSH_GUIDE.md  LICENSE  PUSH_READY.md  QUICK_SETUP.md  README.md  RELEASE_v0.1.22.md  RELEASE_v0.3.0.md  SCHEMAS_SUMMARY.md  WORKFLOW_QUICK_START.md  pyproject.toml  release.sh  requirements.txt  setup.bat  setup.sh  template_generator.py
.github/workflows/: test.yml
agents/: __init__.py  base.py  config.py  mcp_client.py  registry.py
agents/a2a/: __init__.py  agent.py  card.py  client.py  server.py
agents/execution/: __init__.py  backends.py  runner.py
config/: MCP_SERVERS_GUIDE.md  agent_config.yaml  mcp-servers-development.yaml  mcp-servers-production.yaml  mcp_deployment_config.yaml
config/adapters/: customer_a.yaml  customer_b.yaml
config/agents/: example_advanced.yaml  example_basic.yaml  example_customer_sla.yaml
config/examples/: README.md  level_1_simple_chatbot.yaml  level_2_context_aware.yaml  level_3_production_api.yaml  level_4_complex_workflow.yaml  level_5_multi_agent.yaml
databricks_agent_toolkit/: __init__.py
databricks_agent_toolkit/cli/: __init__.py  generate.py  main.py
databricks_agent_toolkit/integrations/: __init__.py  apps.py  auth.py  lakebase.py  mcp_databricks.py  model_serving.py  unity_catalog.py  vector_search.py
databricks_agent_toolkit/scaffolds/: __init__.py  databricks_template_integrator.py  generator.py  validator.py
databricks_agent_toolkit/scaffolds/templates/assistant/: README.md.jinja2  agent.py.jinja2  app.py.jinja2  app.yaml.jinja2  assistant.py.jinja2  config.yaml.jinja2  databricks-app.yml.jinja2  databricks.yml.jinja2  memory_manager.py.jinja2  rag_manager.py.jinja2  requirements.txt.jinja2  start_server.py.jinja2
databricks_agent_toolkit/scaffolds/templates/chatbot/: README.md.jinja2  agent.py.jinja2  app.py.jinja2  app.yaml.jinja2  chatbot.py.jinja2  config.yaml.jinja2  databricks-app.yml.jinja2  databricks.yml.jinja2  requirements.txt.jinja2  start_server.py.jinja2
deployment/: README.md
deployment/databricks-apps/: basic-agent-app.yml  embedded-mode.yml  separate-mode.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ADVISOR.md  COMPLETE_GEPA_GUIDE.md  CONFIGURATION_SYSTEM.md  CROSS_DOMAIN_EXAMPLES.md  DATABRICKS_NATIVE_CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EVALUATION_GUIDE.md  GEPA_OPTIMIZATION.md  GETTING_STARTED.md  HUMAN_FEEDBACK_OPTIMIZATION.md  IMPLEMENTATION_ROADMAP.md  INTEGRATIONS.md  L2_STREAMLIT_RATIONALE.md  LEARNING_PATH.md  LEARNING_SCHEMAS.md  MCP_INTEGRATION.md  OBSERVABILITY_GUIDE.md  OPTIMIZER_COMPARISON.md  PLATFORM_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  SME_FEEDBACK_AS_METRIC.md  TEMPLATE_GUIDE.md  USE_CASES.md  V0.3.0_MIGRATION_PLAN.md
docs/schemas/: 01_DATA_SCHEMAS_SUMMARY.md  02_SCHEMA_MAPPING.md  03_SCHEMA_ADAPTATION_GUIDE.md  04_SCHEMA_VERSIONING_GUIDE.md  README.md  SCHEMAS_QUICK_REFERENCE.md  SCHEMA_VERSIONING_QUICK_START.md
e2e-test-l2/: README.md  app.py  assistant.py  config.yaml  databricks-app.yml  databricks.yml  memory_manager.py  rag_manager.py
evaluation/: __init__.py  harness.py  metrics.py  reporters.py  runner.py
examples/: a2a_official_example.py  custom_judges_example.py  custom_scorers_example.py  databricks_app_with_self_improvement.py  dynamic_tool_registry.py  gepa_comparison_example.py  gepa_optimization_example.py  langgraph_planning_workflow.py  learning_agents_generic.py  mcp_basic_usage.py  mlflow3_evaluation_example.py  plug_and_play_integration.py  self_improving_agent_with_mcp.py  using_mcp_client.py  zerobus_telemetry_example.py
examples/databricks_deployment/: README.md  app.py  databricks-app.yml
examples/working_example_customer_support/customer_support/: schemas.py
mcp-servers/: README.md  __init__.py  pyproject.toml  requirements.txt
mcp-servers/shared/: __init__.py  auth.py  schemas.py
memory/: __init__.py  agents.py  context.py  embeddings.py  graphs.py  manager.py  policies.py  shared.py  stores.py  strategies.py
monitoring/: __init__.py  alerting.py  health_check.py  metrics_collector.py  performance.py
optimization/: __init__.py  ab_testing.py  dspy_gepa_optimizer.py  dspy_optimizer.py  gepa_optimizer.py  human_feedback_optimizer.py  prompt_optimizer.py  textgrad_optimizer.py
scripts/: check_template_size.py  cleanup_and_release.sh  cleanup_temp_files.py  deploy_agent.sh  run_tests.sh  setup_telemetry.sh  test_single_app.sh  test_streaming_endpoints.sh
shared/: __init__.py  config_loader.py
shared/adapters/: __init__.py  base.py  examples.py  loader.py  transaction_adapters.py
shared/schemas/: README.md  __init__.py  agent_io.py  contexts.py  embeddings.py  evaluation.py  examples.py  fraud_signals.py  learning.py  mcp_tools.py  nested_transaction.py  optimization.py  telemetry.py  transactions.py
shared/schemas/versioning/: __init__.py  base.py  compatibility.py  examples.py  migrations.py
shared/schemas/versions/: __init__.py
shared/schemas/versions/v1/: __init__.py
shared/types/: __init__.py
shared/utils/: __init__.py
sota_agent/: __init__.py  architect.py  cli.py  deploy.py  learn.py  main_cli.py
telemetry/: __init__.py  context.py  exporter.py  metrics.py  tracer.py
tests/: README_PREVENTING_ENDPOINT_BUGS.md  TESTING.md  test_agent_base.py  test_code_structure.py  test_config.py  test_e2e_chatbot.py  test_l2_memory.py  validate_templates.py
