[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sota-agent-framework"
version = "0.1.6"
description = "Domain-agnostic agent framework for integrating AI agents into data pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    {name = "SOTA Agent Team"}
]

keywords = [
    "agents",
    "agentic-ai",
    "databricks",
    "mlops",
    "llm",
    "framework",
    "agent-orchestration",
    "plug-and-play"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Core dependencies (minimal - only what's absolutely needed)
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
# Databricks integration
databricks = [
    "databricks-sdk>=0.20.0",
    "databricks-sql-connector>=3.0.0",
    "mlflow>=2.10.0",
]

# Agent frameworks
agent-frameworks = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
]

# Optimization frameworks
optimization = [
    "dspy-ai>=2.4.0",
    "textgrad>=0.1.0",
]

# Distributed execution
ray = [
    "ray[default]>=2.0.0",
]

# Model Context Protocol (MCP)
mcp = [
    "mcp>=0.1.0",
]

# Message bus
messaging = [
    "nats-py>=2.6.0",
    "redis>=5.0.0",
]

# Telemetry
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
]

# Web framework
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=12.0",
]

# All features
all = [
    "sota-agent-framework[databricks,agent-frameworks,optimization,ray,mcp,messaging,telemetry,web]",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/sota-agent-framework"
Documentation = "https://github.com/your-org/sota-agent-framework/tree/main/docs"
Repository = "https://github.com/your-org/sota-agent-framework"
Issues = "https://github.com/your-org/sota-agent-framework/issues"

[tool.setuptools]
packages.find = {where = ["."], include = ["agents*", "shared*", "sota_agent*"]}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project.scripts]
sota-generate = "sota_agent.cli:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
asyncio_mode = "auto"
